@@ -1,3 +1,9 @@
+2005-03-22 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/scim_canna_imengine.cpp,
+	  src/canna_jrkanji.cpp, src/canna_jrkanji.h:
+	Added some properties to change input mode.
+
 2005-03-21 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/canna_jrkanji.cpp, src/canna_jrkanji.h,
